@@ -1,5 +1,6 @@
 Version 2.01.06 - 
 ====================================
+  Fix clvmd-gulm locking.
 
 Version 2.01.05 - 18th February 2005
 ====================================
